#96198: "Could not resolve Time Distortion "

--- a/src/player-table.scss
+++ b/src/player-table.scss
@@ -104,7 +104,7 @@
       display: flex;
       justify-content: center;
       height: 24px;
-      z-index: 5;
+      z-index: 20;
 
       .i-mana-x {
          display: flex;
